@@ -18,7 +18,7 @@ public class HackerNewsService {
     private static final String STORY_BASE_URL = "https://hacker-news.firebaseio.com/v0/item/";
 
     private final RestTemplate restTemplate = new RestTemplate();
-    private final ExecutorService executor = Executors.newFixedThreadPool(10); // Pool de threads para paralelismo
+    private final ExecutorService executor = Executors.newFixedThreadPool(100); // Pool de threads para paralelismo
 
     public List<HackerNewsItemRecord> fetchTopStoriesWithKeywords(List<String> keywords) {
         // Obter os IDs das top stories
@@ -26,13 +26,20 @@ public class HackerNewsService {
         List<Integer> topStoryIds = new ArrayList<>();
         topStoryIdsNode.forEach(id -> topStoryIds.add(id.asInt()));
 
-        // Filtrar histórias por palavras-chave
-        return topStoryIds.stream()
+        // Iniciar tarefas assíncronas para ir buscar cada história
+        List<CompletableFuture<HackerNewsItemRecord>> futures = topStoryIds.stream()
                 .map(id -> CompletableFuture.supplyAsync(() -> fetchStory(id), executor))
+                .collect(Collectors.toList());
+
+        // Aguardar a conclusão de todas as tarefas
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+
+        // Filtrar histórias por palavras-chave
+        return futures.stream()
                 .map(CompletableFuture::join)
                 .filter(story -> story != null && story.title() != null &&
                         keywords.stream().anyMatch(story.title()::contains))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private HackerNewsItemRecord fetchStory(int id) {
